updates to types and nullability